# play-cinema

./: README.md  main.py  pyproject.toml  styles.css
templates/: index.html
