[tool.poetry]
name = "play-cinema"
version = "0.1.0"
description = "}"
authors = ["Juan Morales <hello.juan.moc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = "^0.32.0"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
